--- a/package.json
+++ b/package.json
@@ -20,11 +20,16 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-qr-reader": "^3.0.0-beta-1",
+    "react-qr-scanner": "^1.0.0-alpha.11",
+    "react-qrcode-logo": "^3.0.0",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
     "react-toastify": "^10.0.6",
+    "react-tsparticles": "^2.12.2",
     "styled-components": "^6.1.13",
+    "tsparticles-slim": "^2.12.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
